A safe way to load files JSON